performance chatbot response